--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-youtube": "^10.1.0",
     "tailwind-merge": "^2.6.0",
